--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Sora&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: "Sora", sans-serif;
 }
 html {
   scroll-behavior: smooth;
